Some minor changes to build with newer JDK versions (#6)
* Add a maven dependency on java.xml.bind, used in tests.

This is part of the core JDK in JDK 8, but it's been split out in later versions,
so this helps future compatibility.

* Use Class.getConstructor().newInstance() to construct BlockCipherFactory.

Rather than Class.getInstance(), which is deprecated in newer JDK versions.

* Use javac -h to generate JNI header files, rather than javah.

The javah tool is deprecated starting in JDK 1.9 and removed in later versions.

* Set jdkIncludePath properly in cases where java.home doesn't end in ../jre.